Ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    APOSTROFE
    ARROBA
    AS
    ASPAS
    BREAK
    CASE
    CLONE
    COMMENT_MULTI
    COMMENT_SINGLE
    CONCATENATE
    CONTINUE
    CRASE
    DECLARE
    DO
    ENDDECLARE
    FOR
    FOREACH
    GLOBAL
    IDENTATION
    OR
    RETURN
    VAR
    WHILE

Grammar

Rule 0     S' -> main
Rule 1     main -> BEGIN_PROGRAM main_INNER END_PROGRAM
Rule 2     main_INNER -> inner_statement main_INNER
Rule 3     main_INNER -> <empty>
Rule 4     inner_statement -> function_declaration_statement
Rule 5     inner_statement -> statement
Rule 6     statement -> expr SEMICOLON
Rule 7     statement -> IF LPAREN expr RPAREN LKEY statement_MUL RKEY statement_elseif statement_else
Rule 8     statement -> SEMICOLON
Rule 9     statement_MUL -> statement statement_MUL
Rule 10    statement_MUL -> <empty>
Rule 11    statement_elseif -> ELSEIF LPAREN expr RPAREN statement_elseif_OPT
Rule 12    statement_elseif -> <empty>
Rule 13    statement_elseif_OPT -> statement
Rule 14    statement_elseif_OPT -> LKEY statement_MUL RKEY
Rule 15    statement_else -> ELSE else_OPT
Rule 16    statement_else -> <empty>
Rule 17    else_OPT -> statement
Rule 18    else_OPT -> LKEY statement_MUL RKEY
Rule 19    AMPERSAND_OPT -> AMPERSAND
Rule 20    AMPERSAND_OPT -> <empty>
Rule 21    function_call -> ID LPAREN function_call_parameter_list RPAREN
Rule 22    function_call -> base_variable
Rule 23    function_call_parameter_list -> function_call_parameter function_call_list_COLON_FUNCTION
Rule 24    function_call_parameter_list -> <empty>
Rule 25    function_call_list_COLON_FUNCTION -> COLON function_call_parameter function_call_list_COLON_FUNCTION
Rule 26    function_call_list_COLON_FUNCTION -> <empty>
Rule 27    expr_without_variable_COLON_ASSIGNMENT -> COLON assignment_list_element expr_without_variable_COLON_ASSIGNMENT
Rule 28    expr_without_variable_COLON_ASSIGNMENT -> <empty>
Rule 29    function_call_parameter -> variable
Rule 30    function_call_parameter -> AMPERSAND VARIABLE
Rule 31    assignment_list_element -> variable
Rule 32    assignment_list_element -> LIST LPAREN assignment_list_element assignment_list_element_COLON_ASSIGNMENT RPAREN
Rule 33    assignment_list_element_COLON_ASSIGNMENT -> COLON assignment_list_element assignment_list_element_COLON_ASSIGNMENT
Rule 34    assignment_list_element_COLON_ASSIGNMENT -> <empty>
Rule 35    unary_operator -> EXC_DOT
Rule 36    unary_operator -> PLUS
Rule 37    unary_operator -> MINUS
Rule 38    type_cast_operator -> INT_TYPE
Rule 39    type_cast_operator -> DOUBLE_TYPE
Rule 40    type_cast_operator -> FLOAT_TYPE
Rule 41    type_cast_operator -> REAL_TYPE
Rule 42    type_cast_operator -> STRING_TYPE
Rule 43    type_cast_operator -> ARRAY_TYPE
Rule 44    type_cast_operator -> BOOLEAN_TYPE
Rule 45    type_cast_operator -> BOOL_TYPE
Rule 46    type_cast_operator -> UNSET
Rule 47    arithmetic_operator -> PLUS
Rule 48    arithmetic_operator -> DIVIDE
Rule 49    arithmetic_operator -> PERCENT
Rule 50    arithmetic_operator -> TIMES
Rule 51    arithmetic_operator -> MINUS
Rule 52    assign_operator -> ADD_ASSIGN
Rule 53    assign_operator -> SUB_ASSIGN
Rule 54    assign_operator -> MOD_ASSIGN
Rule 55    assign_operator -> PLUS_ASSIGN
Rule 56    assign_operator -> DIVIDE_ASSIGN
Rule 57    assign_operator -> ASSIGN
Rule 58    comparission_operator -> EQUALS
Rule 59    comparission_operator -> GREAT_THAN
Rule 60    comparission_operator -> LESS_THAN
Rule 61    comparission_operator -> LESS_EQUAL
Rule 62    comparission_operator -> GREAT_EQUAL
Rule 63    comparission_operator -> NOT_EQUAL
Rule 64    comparission_operator -> LEFT_LOGICAL
Rule 65    comparission_operator -> RIGHT_LOGICAL
Rule 66    expr -> INCREMENT variable
Rule 67    expr -> variable INCREMENT
Rule 68    expr -> DECREMENT variable
Rule 69    expr -> variable DECREMENT
Rule 70    expr -> variable LBRACKET expr RBRACKET
Rule 71    expr -> LPAREN expr RPAREN
Rule 72    expr -> unary_operator expr
Rule 73    expr -> expr INTE_DOT expr DDOT expr
Rule 74    expr -> expr comparission_operator expr
Rule 75    expr -> variable assign_operator expr
Rule 76    expr -> variable assign_operator AMPERSAND expr
Rule 77    expr -> expr arithmetic_operator expr
Rule 78    expr -> LPAREN type_cast_operator RPAREN expr
Rule 79    expr -> EXIT expr_without_variable_EXIT
Rule 80    expr -> DIE expr_without_variable_EXIT
Rule 81    expr -> ARRAY_TYPE LPAREN array_pair_list RPAREN
Rule 82    expr -> function_call
Rule 83    expr -> variable
Rule 84    expr -> NUMBER_REAL
Rule 85    expr -> NUMBER_INTEGER
Rule 86    expr -> CONSTANT_ENCAPSED_STRING
Rule 87    expr -> TRUE
Rule 88    expr -> FALSE
Rule 89    expr_without_variable_ENCAPS -> encaps expr_without_variable_ENCAPS
Rule 90    expr_without_variable_ENCAPS -> <empty>
Rule 91    encaps -> encaps_var
Rule 92    encaps -> VARIABLE
Rule 93    encaps -> LPAREN
Rule 94    encaps -> RPAREN
Rule 95    encaps -> LKEY
Rule 96    encaps -> RKEY
Rule 97    encaps_var -> VARIABLE encaps_var_1
Rule 98    encaps_var -> DOLAR LBRACKET expr RBRACKET
Rule 99    encaps_var -> DOLAR LKEY ID LBRACKET expr RBRACKET RKEY
Rule 100   encaps_var -> LKEY variable RKEY
Rule 101   encaps_var_1 -> LBRACKET encaps_var_offset RBRACKET
Rule 102   encaps_var_1 -> <empty>
Rule 103   encaps_var_offset -> STRING
Rule 104   encaps_var_offset -> VARIABLE
Rule 105   expr_without_variable_EXIT -> exit_expr
Rule 106   expr_without_variable_EXIT -> <empty>
Rule 107   exit_expr -> LPAREN exit_expr_EXPR RPAREN
Rule 108   exit_expr_EXPR -> expr
Rule 109   exit_expr_EXPR -> <empty>
Rule 110   variable -> base_variable
Rule 111   variable -> function_call
Rule 112   base_variable -> reference_variable
Rule 113   base_variable -> simple_indirect_reference_DOLAR reference_variable
Rule 114   reference_variable -> compound_variable reference_variable_SELECTOR
Rule 115   reference_variable_SELECTOR -> selector reference_variable_SELECTOR
Rule 116   reference_variable_SELECTOR -> <empty>
Rule 117   compound_variable -> VARIABLE
Rule 118   compound_variable -> DOLAR LKEY expr RKEY
Rule 119   simple_indirect_reference_DOLAR -> DOLAR simple_indirect_reference_DOLAR
Rule 120   simple_indirect_reference_DOLAR -> <empty>
Rule 121   selector -> LBRACKET selector_EXPR RBRACKET
Rule 122   selector_EXPR -> expr
Rule 123   selector_EXPR -> <empty>
Rule 124   variable_name -> VARIABLE
Rule 125   inner_statement_MUL -> inner_statement inner_statement_MUL
Rule 126   inner_statement_MUL -> <empty>
Rule 127   function_declaration_statement -> FUNCTION AMPERSAND_OPT ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
Rule 128   parameter_list -> parameter parameter_list_COLON_PARAMETER
Rule 129   parameter_list -> <empty>
Rule 130   parameter_list_COLON_PARAMETER -> COLON parameter parameter_list_COLON_PARAMETER
Rule 131   parameter_list_COLON_PARAMETER -> <empty>
Rule 132   parameter -> parameter_type AMPERSAND_OPT VARIABLE parameter_ASSIGN_STATIC_OPT
Rule 133   parameter_type -> INT_TYPE
Rule 134   parameter_type -> BOOLEAN_TYPE
Rule 135   parameter_type -> STRING_TYPE
Rule 136   parameter_type -> FLOAT_TYPE
Rule 137   parameter_type -> ARRAY_TYPE
Rule 138   parameter_type -> BOOL_TYPE
Rule 139   parameter_type -> REAL_TYPE
Rule 140   parameter_type -> DOUBLE_TYPE
Rule 141   parameter_type -> <empty>
Rule 142   parameter_ASSIGN_STATIC_OPT -> ASSIGN static_scalar
Rule 143   parameter_ASSIGN_STATIC_OPT -> <empty>
Rule 144   static_scalar -> common_scalar
Rule 145   static_scalar -> PLUS static_scalar
Rule 146   static_scalar -> MINUS static_scalar
Rule 147   common_scalar -> NUMBER_REAL
Rule 148   common_scalar -> NUMBER_INTEGER
Rule 149   common_scalar -> CONSTANT_ENCAPSED_STRING
Rule 150   static_scalar_OPT -> static_array_pair_list
Rule 151   static_scalar_OPT -> <empty>
Rule 152   static_array_pair_list -> static_array_pair static_array_pair_list_COLON_STATIC static_array_pair_list_COLON
Rule 153   static_array_pair_list_COLON_STATIC -> COLON static_array_pair static_array_pair_list_COLON_STATIC
Rule 154   static_array_pair_list_COLON_STATIC -> <empty>
Rule 155   static_array_pair_list_COLON -> COLON
Rule 156   static_array_pair_list_COLON -> <empty>
Rule 157   static_array_pair -> static_scalar static_array_pair_ATTR_STATIC
Rule 158   static_array_pair_ATTR_STATIC -> ATTR_ASSOC static_scalar
Rule 159   static_array_pair_ATTR_STATIC -> <empty>
Rule 160   array_pair_list -> array_pair array_pair_list_ARR_PAIR
Rule 161   array_pair_list_ARR_PAIR -> COLON array_pair array_pair_list_ARR_PAIR
Rule 162   array_pair_list_ARR_PAIR -> <empty>
Rule 163   array_pair -> expr array_pair_ATTR_EXPR_OPT
Rule 164   array_pair -> array_pair_EXPR_ATTR_OPT AMPERSAND variable
Rule 165   array_pair_ATTR_EXPR_OPT -> ATTR_ASSOC expr
Rule 166   array_pair_ATTR_EXPR_OPT -> <empty>
Rule 167   array_pair_EXPR_ATTR_OPT -> expr ATTR_ASSOC
Rule 168   array_pair_EXPR_ATTR_OPT -> <empty>

Terminals, with rules where they appear

ADD_ASSIGN           : 52
AMPERSAND            : 19 30 76 164
AND                  : 
APOSTROFE            : 
ARRAY_TYPE           : 43 81 137
ARROBA               : 
AS                   : 
ASPAS                : 
ASSIGN               : 57 142
ATTR_ASSOC           : 158 165 167
BEGIN_PROGRAM        : 1
BOOLEAN_TYPE         : 44 134
BOOL_TYPE            : 45 138
BREAK                : 
CASE                 : 
CLONE                : 
COLON                : 25 27 33 130 153 155 161
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
CONCATENATE          : 
CONSTANT_ENCAPSED_STRING : 86 149
CONTINUE             : 
CRASE                : 
DDOT                 : 73
DECLARE              : 
DECREMENT            : 68 69
DIE                  : 80
DIVIDE               : 48
DIVIDE_ASSIGN        : 56
DO                   : 
DOLAR                : 98 99 118 119
DOUBLE_TYPE          : 39 140
ELSE                 : 15
ELSEIF               : 11
ENDDECLARE           : 
END_PROGRAM          : 1
EQUALS               : 58
EXC_DOT              : 35
EXIT                 : 79
FALSE                : 88
FLOAT_TYPE           : 40 136
FOR                  : 
FOREACH              : 
FUNCTION             : 127
GLOBAL               : 
GREAT_EQUAL          : 62
GREAT_THAN           : 59
ID                   : 21 99 127
IDENTATION           : 
IF                   : 7
INCREMENT            : 66 67
INTE_DOT             : 73
INT_TYPE             : 38 133
LBRACKET             : 70 98 99 101 121
LEFT_LOGICAL         : 64
LESS_EQUAL           : 61
LESS_THAN            : 60
LIST                 : 32
LKEY                 : 7 14 18 95 99 100 118 127
LPAREN               : 7 11 21 32 71 78 81 93 107 127
MINUS                : 37 51 146
MOD_ASSIGN           : 54
NOT_EQUAL            : 63
NUMBER_INTEGER       : 85 148
NUMBER_REAL          : 84 147
OR                   : 
PERCENT              : 49
PLUS                 : 36 47 145
PLUS_ASSIGN          : 55
RBRACKET             : 70 98 99 101 121
REAL_TYPE            : 41 139
RETURN               : 
RIGHT_LOGICAL        : 65
RKEY                 : 7 14 18 96 99 100 118 127
RPAREN               : 7 11 21 32 71 78 81 94 107 127
SEMICOLON            : 6 8
STRING               : 103
STRING_TYPE          : 42 135
SUB_ASSIGN           : 53
TIMES                : 50
TRUE                 : 87
UNSET                : 46
VAR                  : 
VARIABLE             : 30 92 97 104 117 124 132
WHILE                : 
error                : 

Nonterminals, with rules where they appear

AMPERSAND_OPT        : 127 132
arithmetic_operator  : 77
array_pair           : 160 161
array_pair_ATTR_EXPR_OPT : 163
array_pair_EXPR_ATTR_OPT : 164
array_pair_list      : 81
array_pair_list_ARR_PAIR : 160 161
assign_operator      : 75 76
assignment_list_element : 27 32 33
assignment_list_element_COLON_ASSIGNMENT : 32 33
base_variable        : 22 110
common_scalar        : 144
comparission_operator : 74
compound_variable    : 114
else_OPT             : 15
encaps               : 89
encaps_var           : 91
encaps_var_1         : 97
encaps_var_offset    : 101
exit_expr            : 105
exit_expr_EXPR       : 107
expr                 : 6 7 11 70 71 72 73 73 73 74 74 75 76 77 77 78 98 99 108 118 122 163 165 167
expr_without_variable_COLON_ASSIGNMENT : 27
expr_without_variable_ENCAPS : 89
expr_without_variable_EXIT : 79 80
function_call        : 82 111
function_call_list_COLON_FUNCTION : 23 25
function_call_parameter : 23 25
function_call_parameter_list : 21
function_declaration_statement : 4
inner_statement      : 2 125
inner_statement_MUL  : 125 127
main                 : 0
main_INNER           : 1 2
parameter            : 128 130
parameter_ASSIGN_STATIC_OPT : 132
parameter_list       : 127
parameter_list_COLON_PARAMETER : 128 130
parameter_type       : 132
reference_variable   : 112 113
reference_variable_SELECTOR : 114 115
selector             : 115
selector_EXPR        : 121
simple_indirect_reference_DOLAR : 113 119
statement            : 5 9 13 17
statement_MUL        : 7 9 14 18
statement_else       : 7
statement_elseif     : 7
statement_elseif_OPT : 11
static_array_pair    : 152 153
static_array_pair_ATTR_STATIC : 157
static_array_pair_list : 150
static_array_pair_list_COLON : 152
static_array_pair_list_COLON_STATIC : 152 153
static_scalar        : 142 145 146 157 158
static_scalar_OPT    : 
type_cast_operator   : 78
unary_operator       : 72
variable             : 29 31 66 67 68 69 70 75 76 83 100 164
variable_name        : 

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . BEGIN_PROGRAM main_INNER END_PROGRAM

    BEGIN_PROGRAM   shift and go to state 2

    main                           shift and go to state 1

state 1

    (0) S' -> main .



state 2

    (1) main -> BEGIN_PROGRAM . main_INNER END_PROGRAM
    (2) main_INNER -> . inner_statement main_INNER
    (3) main_INNER -> .
    (4) inner_statement -> . function_declaration_statement
    (5) inner_statement -> . statement
    (127) function_declaration_statement -> . FUNCTION AMPERSAND_OPT ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (6) statement -> . expr SEMICOLON
    (7) statement -> . IF LPAREN expr RPAREN LKEY statement_MUL RKEY statement_elseif statement_else
    (8) statement -> . SEMICOLON
    (66) expr -> . INCREMENT variable
    (67) expr -> . variable INCREMENT
    (68) expr -> . DECREMENT variable
    (69) expr -> . variable DECREMENT
    (70) expr -> . variable LBRACKET expr RBRACKET
    (71) expr -> . LPAREN expr RPAREN
    (72) expr -> . unary_operator expr
    (73) expr -> . expr INTE_DOT expr DDOT expr
    (74) expr -> . expr comparission_operator expr
    (75) expr -> . variable assign_operator expr
    (76) expr -> . variable assign_operator AMPERSAND expr
    (77) expr -> . expr arithmetic_operator expr
    (78) expr -> . LPAREN type_cast_operator RPAREN expr
    (79) expr -> . EXIT expr_without_variable_EXIT
    (80) expr -> . DIE expr_without_variable_EXIT
    (81) expr -> . ARRAY_TYPE LPAREN array_pair_list RPAREN
    (82) expr -> . function_call
    (83) expr -> . variable
    (84) expr -> . NUMBER_REAL
    (85) expr -> . NUMBER_INTEGER
    (86) expr -> . CONSTANT_ENCAPSED_STRING
    (87) expr -> . TRUE
    (88) expr -> . FALSE
    (110) variable -> . base_variable
    (111) variable -> . function_call
    (35) unary_operator -> . EXC_DOT
    (36) unary_operator -> . PLUS
    (37) unary_operator -> . MINUS
    (21) function_call -> . ID LPAREN function_call_parameter_list RPAREN
    (22) function_call -> . base_variable
    (112) base_variable -> . reference_variable
    (113) base_variable -> . simple_indirect_reference_DOLAR reference_variable
    (114) reference_variable -> . compound_variable reference_variable_SELECTOR
    (119) simple_indirect_reference_DOLAR -> . DOLAR simple_indirect_reference_DOLAR
    (120) simple_indirect_reference_DOLAR -> .
    (117) compound_variable -> . VARIABLE
    (118) compound_variable -> . DOLAR LKEY expr RKEY

  ! shift/reduce conflict for DOLAR resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
    END_PROGRAM     reduce using rule 3 (main_INNER -> .)
    FUNCTION        shift and go to state 7
    IF              shift and go to state 12
    SEMICOLON       shift and go to state 11
    INCREMENT       shift and go to state 13
    DECREMENT       shift and go to state 15
    LPAREN          shift and go to state 9
    EXIT            shift and go to state 17
    DIE             shift and go to state 18
    ARRAY_TYPE      shift and go to state 19
    NUMBER_REAL     shift and go to state 21
    NUMBER_INTEGER  shift and go to state 22
    CONSTANT_ENCAPSED_STRING shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    EXC_DOT         shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    ID              shift and go to state 8
    DOLAR           shift and go to state 33
    VARIABLE        shift and go to state 34

  ! VARIABLE        [ reduce using rule 120 (simple_indirect_reference_DOLAR -> .) ]
  ! DOLAR           [ reduce using rule 120 (simple_indirect_reference_DOLAR -> .) ]

    main_INNER                     shift and go to state 3
    inner_statement                shift and go to state 4
    function_declaration_statement shift and go to state 5
    statement                      shift and go to state 6
    expr                           shift and go to state 10
    variable                       shift and go to state 14
    unary_operator                 shift and go to state 16
    function_call                  shift and go to state 20
    base_variable                  shift and go to state 26
    reference_variable             shift and go to state 30
    simple_indirect_reference_DOLAR shift and go to state 31
    compound_variable              shift and go to state 32

state 3

    (1) main -> BEGIN_PROGRAM main_INNER . END_PROGRAM

    END_PROGRAM     shift and go to state 35


state 4

    (2) main_INNER -> inner_statement . main_INNER
    (2) main_INNER -> . inner_statement main_INNER
    (3) main_INNER -> .
    (4) inner_statement -> . function_declaration_statement
    (5) inner_statement -> . statement
    (127) function_declaration_statement -> . FUNCTION AMPERSAND_OPT ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (6) statement -> . expr SEMICOLON
    (7) statement -> . IF LPAREN expr RPAREN LKEY statement_MUL RKEY statement_elseif statement_else
    (8) statement -> . SEMICOLON
    (66) expr -> . INCREMENT variable
    (67) expr -> . variable INCREMENT
    (68) expr -> . DECREMENT variable
    (69) expr -> . variable DECREMENT
    (70) expr -> . variable LBRACKET expr RBRACKET
    (71) expr -> . LPAREN expr RPAREN
    (72) expr -> . unary_operator expr
    (73) expr -> . expr INTE_DOT expr DDOT expr
    (74) expr -> . expr comparission_operator expr
    (75) expr -> . variable assign_operator expr
    (76) expr -> . variable assign_operator AMPERSAND expr
    (77) expr -> . expr arithmetic_operator expr
    (78) expr -> . LPAREN type_cast_operator RPAREN expr
    (79) expr -> . EXIT expr_without_variable_EXIT
    (80) expr -> . DIE expr_without_variable_EXIT
    (81) expr -> . ARRAY_TYPE LPAREN array_pair_list RPAREN
    (82) expr -> . function_call
    (83) expr -> . variable
    (84) expr -> . NUMBER_REAL
    (85) expr -> . NUMBER_INTEGER
    (86) expr -> . CONSTANT_ENCAPSED_STRING
    (87) expr -> . TRUE
    (88) expr -> . FALSE
    (110) variable -> . base_variable
    (111) variable -> . function_call
    (35) unary_operator -> . EXC_DOT
    (36) unary_operator -> . PLUS
    (37) unary_operator -> . MINUS
    (21) function_call -> . ID LPAREN function_call_parameter_list RPAREN
    (22) function_call -> . base_variable
    (112) base_variable -> . reference_variable
    (113) base_variable -> . simple_indirect_reference_DOLAR reference_variable
    (114) reference_variable -> . compound_variable reference_variable_SELECTOR
    (119) simple_indirect_reference_DOLAR -> . DOLAR simple_indirect_reference_DOLAR
    (120) simple_indirect_reference_DOLAR -> .
    (117) compound_variable -> . VARIABLE
    (118) compound_variable -> . DOLAR LKEY expr RKEY

  ! shift/reduce conflict for DOLAR resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
    END_PROGRAM     reduce using rule 3 (main_INNER -> .)
    FUNCTION        shift and go to state 7
    IF              shift and go to state 12
    SEMICOLON       shift and go to state 11
    INCREMENT       shift and go to state 13
    DECREMENT       shift and go to state 15
    LPAREN          shift and go to state 9
    EXIT            shift and go to state 17
    DIE             shift and go to state 18
    ARRAY_TYPE      shift and go to state 19
    NUMBER_REAL     shift and go to state 21
    NUMBER_INTEGER  shift and go to state 22
    CONSTANT_ENCAPSED_STRING shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    EXC_DOT         shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    ID              shift and go to state 8
    DOLAR           shift and go to state 33
    VARIABLE        shift and go to state 34

  ! VARIABLE        [ reduce using rule 120 (simple_indirect_reference_DOLAR -> .) ]
  ! DOLAR           [ reduce using rule 120 (simple_indirect_reference_DOLAR -> .) ]

    inner_statement                shift and go to state 4
    main_INNER                     shift and go to state 36
    function_declaration_statement shift and go to state 5
    statement                      shift and go to state 6
    expr                           shift and go to state 10
    variable                       shift and go to state 14
    unary_operator                 shift and go to state 16
    function_call                  shift and go to state 20
    base_variable                  shift and go to state 26
    reference_variable             shift and go to state 30
    simple_indirect_reference_DOLAR shift and go to state 31
    compound_variable              shift and go to state 32

state 5

    (4) inner_statement -> function_declaration_statement .

    FUNCTION        reduce using rule 4 (inner_statement -> function_declaration_statement .)
    IF              reduce using rule 4 (inner_statement -> function_declaration_statement .)
    SEMICOLON       reduce using rule 4 (inner_statement -> function_declaration_statement .)
    INCREMENT       reduce using rule 4 (inner_statement -> function_declaration_statement .)
    DECREMENT       reduce using rule 4 (inner_statement -> function_declaration_statement .)
    LPAREN          reduce using rule 4 (inner_statement -> function_declaration_statement .)
    EXIT            reduce using rule 4 (inner_statement -> function_declaration_statement .)
    DIE             reduce using rule 4 (inner_statement -> function_declaration_statement .)
    ARRAY_TYPE      reduce using rule 4 (inner_statement -> function_declaration_statement .)
    NUMBER_REAL     reduce using rule 4 (inner_statement -> function_declaration_statement .)
    NUMBER_INTEGER  reduce using rule 4 (inner_statement -> function_declaration_statement .)
    CONSTANT_ENCAPSED_STRING reduce using rule 4 (inner_statement -> function_declaration_statement .)
    TRUE            reduce using rule 4 (inner_statement -> function_declaration_statement .)
    FALSE           reduce using rule 4 (inner_statement -> function_declaration_statement .)
    EXC_DOT         reduce using rule 4 (inner_statement -> function_declaration_statement .)
    PLUS            reduce using rule 4 (inner_statement -> function_declaration_statement .)
    MINUS           reduce using rule 4 (inner_statement -> function_declaration_statement .)
    ID              reduce using rule 4 (inner_statement -> function_declaration_statement .)
    DOLAR           reduce using rule 4 (inner_statement -> function_declaration_statement .)
    VARIABLE        reduce using rule 4 (inner_statement -> function_declaration_statement .)
    END_PROGRAM     reduce using rule 4 (inner_statement -> function_declaration_statement .)
    RKEY            reduce using rule 4 (inner_statement -> function_declaration_statement .)


state 6

    (5) inner_statement -> statement .

    FUNCTION        reduce using rule 5 (inner_statement -> statement .)
    IF              reduce using rule 5 (inner_statement -> statement .)
    SEMICOLON       reduce using rule 5 (inner_statement -> statement .)
    INCREMENT       reduce using rule 5 (inner_statement -> statement .)
    DECREMENT       reduce using rule 5 (inner_statement -> statement .)
    LPAREN          reduce using rule 5 (inner_statement -> statement .)
    EXIT            reduce using rule 5 (inner_statement -> statement .)
    DIE             reduce using rule 5 (inner_statement -> statement .)
    ARRAY_TYPE      reduce using rule 5 (inner_statement -> statement .)
    NUMBER_REAL     reduce using rule 5 (inner_statement -> statement .)
    NUMBER_INTEGER  reduce using rule 5 (inner_statement -> statement .)
    CONSTANT_ENCAPSED_STRING reduce using rule 5 (inner_statement -> statement .)
    TRUE            reduce using rule 5 (inner_statement -> statement .)
    FALSE           reduce using rule 5 (inner_statement -> statement .)
    EXC_DOT         reduce using rule 5 (inner_statement -> statement .)
    PLUS            reduce using rule 5 (inner_statement -> statement .)
    MINUS           reduce using rule 5 (inner_statement -> statement .)
    ID              reduce using rule 5 (inner_statement -> statement .)
    DOLAR           reduce using rule 5 (inner_statement -> statement .)
    VARIABLE        reduce using rule 5 (inner_statement -> statement .)
    END_PROGRAM     reduce using rule 5 (inner_statement -> statement .)
    RKEY            reduce using rule 5 (inner_statement -> statement .)


state 7

    (127) function_declaration_statement -> FUNCTION . AMPERSAND_OPT ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (19) AMPERSAND_OPT -> . AMPERSAND
    (20) AMPERSAND_OPT -> .

    AMPERSAND       shift and go to state 38
    ID              reduce using rule 20 (AMPERSAND_OPT -> .)

    AMPERSAND_OPT                  shift and go to state 37

state 8

    (21) function_call -> ID . LPAREN function_call_parameter_list RPAREN

    LPAREN          shift and go to state 39


state 9

    (71) expr -> LPAREN . expr RPAREN
    (78) expr -> LPAREN . type_cast_operator RPAREN expr
    (66) expr -> . INCREMENT variable
    (67) expr -> . variable INCREMENT
    (68) expr -> . DECREMENT variable
    (69) expr -> . variable DECREMENT
    (70) expr -> . variable LBRACKET expr RBRACKET
    (71) expr -> . LPAREN expr RPAREN
    (72) expr -> . unary_operator expr
    (73) expr -> . expr INTE_DOT expr DDOT expr
    (74) expr -> . expr comparission_operator expr
    (75) expr -> . variable assign_operator expr
    (76) expr -> . variable assign_operator AMPERSAND expr
    (77) expr -> . expr arithmetic_operator expr
    (78) expr -> . LPAREN type_cast_operator RPAREN expr
    (79) expr -> . EXIT expr_without_variable_EXIT
    (80) expr -> . DIE expr_without_variable_EXIT
    (81) expr -> . ARRAY_TYPE LPAREN array_pair_list RPAREN
    (82) expr -> . function_call
    (83) expr -> . variable
    (84) expr -> . NUMBER_REAL
    (85) expr -> . NUMBER_INTEGER
    (86) expr -> . CONSTANT_ENCAPSED_STRING
    (87) expr -> . TRUE
    (88) expr -> . FALSE
    (38) type_cast_operator -> . INT_TYPE
    (39) type_cast_operator -> . DOUBLE_TYPE
    (40) type_cast_operator -> . FLOAT_TYPE
    (41) type_cast_operator -> . REAL_TYPE
    (42) type_cast_operator -> . STRING_TYPE
    (43) type_cast_operator -> . ARRAY_TYPE
    (44) type_cast_operator -> . BOOLEAN_TYPE
    (45) type_cast_operator -> . BOOL_TYPE
    (46) type_cast_operator -> . UNSET
    (110) variable -> . base_variable
    (111) variable -> . function_call
    (35) unary_operator -> . EXC_DOT
    (36) unary_operator -> . PLUS
    (37) unary_operator -> . MINUS
    (21) function_call -> . ID LPAREN function_call_parameter_list RPAREN
    (22) function_call -> . base_variable
    (112) base_variable -> . reference_variable
    (113) base_variable -> . simple_indirect_reference_DOLAR reference_variable
    (114) reference_variable -> . compound_variable reference_variable_SELECTOR
    (119) simple_indirect_reference_DOLAR -> . DOLAR simple_indirect_reference_DOLAR
    (120) simple_indirect_reference_DOLAR -> .
    (117) compound_variable -> . VARIABLE
    (118) compound_variable -> . DOLAR LKEY expr RKEY

  ! shift/reduce conflict for DOLAR resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
    INCREMENT       shift and go to state 13
    DECREMENT       shift and go to state 15
    LPAREN          shift and go to state 9
    EXIT            shift and go to state 17
    DIE             shift and go to state 18
    ARRAY_TYPE      shift and go to state 42
    NUMBER_REAL     shift and go to state 21
    NUMBER_INTEGER  shift and go to state 22
    CONSTANT_ENCAPSED_STRING shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    INT_TYPE        shift and go to state 43
    DOUBLE_TYPE     shift and go to state 44
    FLOAT_TYPE      shift and go to state 45
    REAL_TYPE       shift and go to state 46
    STRING_TYPE     shift and go to state 47
    BOOLEAN_TYPE    shift and go to state 48
    BOOL_TYPE       shift and go to state 49
    UNSET           shift and go to state 50
    EXC_DOT         shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    ID              shift and go to state 8
    DOLAR           shift and go to state 33
    VARIABLE        shift and go to state 34

  ! VARIABLE        [ reduce using rule 120 (simple_indirect_reference_DOLAR -> .) ]
  ! DOLAR           [ reduce using rule 120 (simple_indirect_reference_DOLAR -> .) ]

    expr                           shift and go to state 40
    type_cast_operator             shift and go to state 41
    variable                       shift and go to state 14
    unary_operator                 shift and go to state 16
    function_call                  shift and go to state 20
    base_variable                  shift and go to state 26
    reference_variable             shift and go to state 30
    simple_indirect_reference_DOLAR shift and go to state 31
    compound_variable              shift and go to state 32

state 10

    (6) statement -> expr . SEMICOLON
    (73) expr -> expr . INTE_DOT expr DDOT expr
    (74) expr -> expr . comparission_operator expr
    (77) expr -> expr . arithmetic_operator expr
    (58) comparission_operator -> . EQUALS
    (59) comparission_operator -> . GREAT_THAN
    (60) comparission_operator -> . LESS_THAN
    (61) comparission_operator -> . LESS_EQUAL
    (62) comparission_operator -> . GREAT_EQUAL
    (63) comparission_operator -> . NOT_EQUAL
    (64) comparission_operator -> . LEFT_LOGICAL
    (65) comparission_operator -> . RIGHT_LOGICAL
    (47) arithmetic_operator -> . PLUS
    (48) arithmetic_operator -> . DIVIDE
    (49) arithmetic_operator -> . PERCENT
    (50) arithmetic_operator -> . TIMES
    (51) arithmetic_operator -> . MINUS

    SEMICOLON       shift and go to state 51
    INTE_DOT        shift and go to state 52
    EQUALS          shift and go to state 55
    GREAT_THAN      shift and go to state 56
    LESS_THAN       shift and go to state 57
    LESS_EQUAL      shift and go to state 58
    GREAT_EQUAL     shift and go to state 59
    NOT_EQUAL       shift and go to state 60
    LEFT_LOGICAL    shift and go to state 61
    RIGHT_LOGICAL   shift and go to state 62
    PLUS            shift and go to state 63
    DIVIDE          shift and go to state 64
    PERCENT         shift and go to state 65
    TIMES           shift and go to state 66
    MINUS           shift and go to state 67

    comparission_operator          shift and go to state 53
    arithmetic_operator            shift and go to state 54

state 11

    (8) statement -> SEMICOLON .
